--- a/css/style.scss
+++ b/css/style.scss
@@ -11,19 +11,28 @@ body {
     font-family: Verdana, Geneva, sans-serif;
 }
 
+:root {
+    --h1-size: 2rem;
+    --h2-size: 1.5rem;
+    --h3-size: 1.25rem;
+}
+
 h1 {
-    font-size: 2rem;
-    line-height: calc(2rem * 3);
+    font-size: var(--h1-size);
+    line-height: calc(var(--h1-size) * 1.44);
+    margin-bottom: var(--h1-size);
 }
 
 h2 {
-    font-size: 1.5rem;
-    line-height: calc(1.5rem * 3);
+    font-size: var(--h2-size);
+    line-height: calc(var(--h2-size) * 1.44);
+    margin-bottom: var(--h2-size);
 }
 
 h3 {
-    font-size: 1.25rem;
-    line-height: calc(1.25rem * 3);
+    font-size: var(--h3-size);
+    line-height: calc(var(--h3-size) * 1.44);
+    margin-bottom: var(--h3-size);
 }
 
 p {
